k8s/cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
      - name: cart-service
        image: 555272931108.dkr.ecr.us-east-1.amazonaws.com/cart-service:latest
        ports:
        - containerPort: 3001
