k8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
name: product-service
labels:
app: product-service
spec:
selector:
app: product-service
ports:
- protocol: TCP
port: 80
targetPort: 3002
type: ClusterIP
